header and footer

--- a/app/page.html
+++ b/app/page.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DESIRE</title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -72,63 +68,7 @@
         </div>
       </header>
 
-      <main class="main">
-        <section class="top">
-          <div class="container">
-            <div class="top__inner">
-              <div class="top__slider">
-                <div class="top__slider-wrapper">
-                  <div class="top__slider-item">
-                    <img
-                      src="./images/chair.png"
-                      alt=""
-                      class="top__slider-img"
-                    />
-                    <div class="top__slider-info">
-                      <h2 class="top__slider-title">Furniture collection</h2>
-                      <p class="top__slider-text">
-                        Deep v you probably haven't heard of them banh mi synth
-                        actually affogato. Aesthetic lyft ethical drinking
-                        vinegar austint
-                      </p>
-                    </div>
-                  </div>
-                  <div class="top__slider-item">
-                    <img
-                      src="./images/chair.png"
-                      alt=""
-                      class="top__slider-img"
-                    />
-                    <div class="top__slider-info">
-                      <h2 class="top__slider-title">Furniture collection</h2>
-                      <p class="top__slider-text">
-                        Deep v you probably haven't heard of them banh mi synth
-                        actually affogato. Aesthetic lyft ethical drinking
-                        vinegar austint
-                      </p>
-                    </div>
-                  </div>
-                  <div class="top__slider-item">
-                    <img
-                      src="./images/chair.png"
-                      alt=""
-                      class="top__slider-img"
-                    />
-                    <div class="top__slider-info">
-                      <h2 class="top__slider-title">Furniture collection</h2>
-                      <p class="top__slider-text">
-                        Deep v you probably haven't heard of them banh mi synth
-                        actually affogato. Aesthetic lyft ethical drinking
-                        vinegar austint
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
+      <main class="main"></main>
 
       <footer class="footer">
         <div class="footer__content">
@@ -221,7 +161,6 @@
       </footer>
     </div>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.min.js"></script>
   </body>
 </html>
