header and footer

--- a/app/index.html
+++ b/app/index.html
@@ -74,10 +74,10 @@
 
       <main class="main">
         <section class="top">
-          <div class="container">
-            <div class="top__inner">
-              <div class="top__slider">
-                <div class="top__slider-wrapper">
+          <div class="top__inner">
+            <div class="top__slider">
+              <div class="top__slider-wrapper">
+                <div class="top__slider-box">
                   <div class="top__slider-item">
                     <img
                       src="./images/chair.png"
@@ -93,6 +93,8 @@
                       </p>
                     </div>
                   </div>
+                </div>
+                <div class="top__slider-box">
                   <div class="top__slider-item">
                     <img
                       src="./images/chair.png"
@@ -108,6 +110,8 @@
                       </p>
                     </div>
                   </div>
+                </div>
+                <div class="top__slider-box">
                   <div class="top__slider-item">
                     <img
                       src="./images/chair.png"
@@ -125,6 +129,93 @@
                   </div>
                 </div>
               </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </section>
+        <section class="new-collection">
+          <div class="container-fluid">
+            <h3 class="new-collection__title">Furniture new collection</h3>
+            <p class="new-collection__text">
+              Deep v you probably haven't heard of them banh mi synth actually
+              affogato. Aesthetic lyft ethical drinking vinegar austint
+            </p>
+            <div class="collection">
+              <a class="collection__item" href="#">
+                <img
+                  src="./images/content/collection-1.png"
+                  alt="collection"
+                  class="llection__images"
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  src="./images/content/collection-2.jpg"
+                  alt="collection"
+                  class="llection__images"
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  src="./images/content/collection-3.jpg"
+                  alt="collection"
+                  class="llection__images"
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  src="./images/content/collection-4.jpg"
+                  alt="collection"
+                  class="llection__images"
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  src="./images/content/collection-5.jpg"
+                  alt="collection"
+                  class="llection__images"
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
         </section>
